--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "enzyme": "latest",
     "enzyme-adapter-react-16": "latest",
+    "node-sass": "^4.12.0",
+    "prop-types": "latest",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -12,8 +14,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
-    "yarn": "^1.17.3",
-    "prop-types": "latest"
+    "sass": "^1.22.9",
+    "yarn": "^1.17.3"
   },
   "scripts": {
     "start": "react-scripts start",
