--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "enzyme": "latest",
     "enzyme-adapter-react-16": "latest",
     "node-sass": "^4.12.0",
