--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "enzyme": "latest",
     "enzyme-adapter-react-16": "latest",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^4.12.0",
     "prop-types": "latest",
     "react": "^16.8.6",
